# HeterQA

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
configs/: audit.example.yaml  construction.example.yaml  finalize.example.yaml  release.example.yaml  review.example.yaml
docs/: DATA_PREPARATION.md  PIPELINE.md  RELEASE_FORMAT.md
scripts/: prepare_yelp_oceanbase.sh  run_answer_certification.sh  run_construction.sh  run_contradiction_detection.sh  run_graph_build.sh  run_manual_review.sh  run_quality_certification.sh  run_release_export.sh
src/heterqa/: __init__.py  cli.py
src/heterqa/audit/: __init__.py  contradiction_detection.py
src/heterqa/construction/: __init__.py  candidate_generation.py  contracts.py  evidence_enrichment.py  expansion.py  geo_engine.py  image_engine.py  kg_engine.py  mainline.py  orchestrator.py  pipeline.py  providers.py  query_generation.py  query_validation.py  record_fields.py  structured_selection.py  text_engine.py
src/heterqa/core/: __init__.py  config.py  io.py  logging.py  provenance.py  safety.py  schema.py
src/heterqa/data/: __init__.py  (+1 more)
static/css/: index.css
tests/: __init__.py  test_answer_certification_quality.py  test_candidate_generation.py  test_cli_pipeline.py  test_construction_mainline.py  test_construction_offline_flow.py  test_contradiction_detection.py  test_geo_engine.py  test_graph_workflow.py  test_kg_engine.py  test_model_client.py  test_query_generation.py  test_release_validation.py  test_structured_selection.py  test_yelp_oceanbase_ingest.py  test_yelp_provider.py
(+35 files in other folders)
