[project]
name = "heterqa"
version = "0.1.0"
description = "Data-generation, certification, and release utilities for the HeterQA benchmark."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
models = [
  "openai>=1.0",
  "requests>=2.31",
]
db = [
  "pymysql>=1.1",
]

[project.scripts]
heterqa = "heterqa.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
